Prototype map icons

--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -1002,7 +1002,9 @@
                     "numberjobsMissing": "Failed",
                     "jobsName": "jobs",
                     "fleetRoutingSummary": "Summary",
-                    "routesHeading": "Routes"
+                    "routesHeading": "Routes",
+                    "startName": "Start",
+                    "endName": "End"
                 }
             }
         }
