Remove artefact from earlier approach

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -1008,9 +1008,7 @@
                     "numberjobsMissing": "Nicht erfüllt",
                     "jobsName": "Aufträge",
                     "fleetRoutingSummary": "Zusammenfassung",
-                    "routesHeading": "Routen",
-                    "startName": "Start",
-                    "endName": "Ziel"
+                    "routesHeading": "Routen"
                 }
             }
         }
