--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -1002,9 +1002,7 @@
                     "numberjobsMissing": "Failed",
                     "jobsName": "jobs",
                     "fleetRoutingSummary": "Summary",
-                    "routesHeading": "Routes",
-                    "startName": "Start",
-                    "endName": "End"
+                    "routesHeading": "Routes"
                 }
             }
         }
