--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -1008,7 +1008,9 @@
                     "numberjobsMissing": "Nicht erfüllt",
                     "jobsName": "Aufträge",
                     "fleetRoutingSummary": "Zusammenfassung",
-                    "routesHeading": "Routen"
+                    "routesHeading": "Routen",
+                    "startText": "Von",
+                    "viaText": "Nach"
                 }
             }
         }
