rearrange vehicles columns

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -539,7 +539,8 @@
                     "descriptionColumnText": "Beschreibung",
                     "startColumnText": "Startort",
                     "endColumnText": "Zielort",
-                    "addVehicleTooltip": "Fahrzeug hinzufügen"
+                    "addVehicleTooltip": "Fahrzeug hinzufügen",
+                    "idColumnText": "Fahrzeug"
                 }
             }
         }
