solve some todos

--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -1000,7 +1000,7 @@
                     "totalDrivingDuration": "Driving Duration",
                     "totalServiceDuration": "Service Duration",
                     "totalWaitingDuration": "Waiting Duration",
-                    "numberjobsMissing": "Failed jobs",
+                    "numberjobsMissing": "Unassigned targets",
                     "fleetRoutingSummary": "Summary",
                     "routesHeading": "Routes",
                     "startText": "From",
