--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -969,9 +969,9 @@
                     "addEndPoint": "Zielpunkt setzen",
                     "elevationBtnText": "Höhenprofil",
                     "downloadButtonText": "Download",
-                    "errorGeoCoding": "Standpunkt konnte nicht geladen werden. Bitte versuchen Sie es (später) erneut.",
-                    "errorRoutingRequest": "Routenplanung fehlgeschlagen. Bitte versuchen Sie es (später) erneut.",
-                    "errorDownloadRoute": "Download fehlgeschlagen. Bitte versuchen sie es (später) erneut.",
+                    "errorGeoCoding": "Standpunkt konnte nicht geladen werden.",
+                    "errorRoutingRequest": "Routenplanung fehlgeschlagen.",
+                    "errorDownloadRoute": "Download fehlgeschlagen.",
                     "routingSummaryDetailsButton": "Details",
                     "profileCarText": "Mit dem Auto",
                     "profileBycicleText": "Mit dem Fahrrad",
@@ -989,14 +989,14 @@
                     "computeFleetRoutingButtonText": "Routen berechnen",
                     "elevationBtnText": "Höhenprofil",
                     "downloadButtonText": "Download",
-                    "errorGeoCoding": "Standpunkt konnte nicht geladen werden. Bitte versuchen Sie es (später) erneut.",
-                    "errorRoutingRequest": "Routenplanung fehlgeschlagen. Bitte versuchen Sie es (später) erneut.",
-                    "errorDownloadRoute": "Download fehlgeschlagen. Bitte versuchen sie es (später) erneut.",
+                    "errorGeoCoding": "Standpunkt konnte nicht geladen werden.",
+                    "errorRoutingRequest": "Routenplanung fehlgeschlagen.",
+                    "errorDownloadRoute": "Download fehlgeschlagen.",
                     "routingSummaryDetailsButton": "Details",
                     "profileCarText": "Mit dem Auto",
                     "profileBycicleText": "Mit dem Fahrrad",
                     "profileWalkingText": "Zu Fuß",
-                    "errorFleetRouting" : "Die Anfrage für Flottenrouting ist fehlgeschlagen. Bitte versuchen Sie es (später) erneut.",
+                    "errorFleetRouting" : "Die Routen konnten nicht geladen werden.",
                     "addJobContextText": "Neues Ziel hinzufügen",
                     "addVehicleContextText": "Neues Fahrzeug hinzufügen",
                     "setCurrentJobContextText": "Als aktuelles Ziel setzen",
@@ -1009,12 +1009,14 @@
                     "numberjobsMissing": "Ausgelassene Ziele",
                     "fleetRoutingSummary": "Zusammenfassung",
                     "routesHeading": "Routen",
+                    "vehicleText": "Fahrzeug",
                     "startText": "Von",
                     "viaText": "Nach",
                     "duration": "Dauer",
                     "distance": "Distanz",
                     "startTime": "Startzeit",
-                    "arrivalTime": "Ankunftszeit"
+                    "arrivalTime": "Ankunftszeit",
+                    "settingsTitle": "Einstellungen"
                 }
             }
         }
@@ -1034,7 +1036,7 @@
                     "errorUploadedFileExtension": "Dateityp wird nicht unterstützt. Bitte laden Sie nur eine '.json' oder '.geojson' Datei hoch.",
                     "errorZeroFeatures": "Das hochgelandene GeoJSON enthält keine Features. Bitte laden Sie ein Feature hoch.",
                     "errorGetFeatureInfo": "Das Polygon konnte aus dem Layer nicht ausgelesen werden.",
-                    "errorNoLayerFound": "An diesem Ort befindet sich kein gültiger Layer. Bitte versuchen Sie es erneut.",
+                    "errorNoLayerFound": "An diesem Ort befindet sich kein gültiger Layer.",
                     "errorNoPolygonChosen": "Das gewählte Feature ist kein Polygon. Bitte wählen Sie ein Polygon."
                 }
             }
