--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -556,6 +556,7 @@
                 "routingTools": "Routing",
                 "classicRouting": "Routing (klassisch)",
                 "fleetRouting": "Flottenrouting",
+                "isochroneRouting": "Isochronen",
                 "print": "Drucken",
                 "tools": "Werkzeuge",
                 "draw": "Zeichnen",
