integrate isochrones api

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -1021,6 +1021,15 @@
             }
         }
     },
+    "Koala.view.window.IsochroneRouting": {
+        "config": {
+            "data": {
+                "i18n": {
+                    "isochroneRoutingTitle": "Isochronen"
+                }
+            }
+        }
+    },
     "Koala.view.button.AvoidArea": {
         "config": {
             "data": {
