Basic form with geocoding functionality

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -1025,8 +1025,17 @@
         "config": {
             "data": {
                 "i18n": {
-                    "isochroneRoutingTitle": "Isochronen"
-                }
+                    "isochroneRoutingTitle": "Isochronen",
+                    "addressLabel": "Zentrum",
+                    "addressPlaceholder": "Suchbegriff oder Koordinate eingeben",
+                    "errorGeoCoding": "Standpunkt konnte nicht geladen werden.",
+                    "timeTooltip": "Zeit",
+                    "distanceTooltip": "Strecke",
+                    "submitButtonText": "Berechnen",
+                    "rangeSliderText": "Reichweite",
+                    "intervalSliderText": "Intervall",
+                    "addCenterContextText": "Als Zentrum setzen"
+                 }
             }
         }
     },
