add isochrones map interaction

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -1028,6 +1028,7 @@
                     "isochroneRoutingTitle": "Isochronen",
                     "addressLabel": "Zentrum",
                     "addressPlaceholder": "Suchbegriff oder Koordinate eingeben",
+                    "errorIsochrones": "Isochronen konnten nicht geladen werden.",
                     "errorGeoCoding": "Standpunkt konnte nicht geladen werden.",
                     "timeTooltip": "Zeit",
                     "distanceTooltip": "Strecke",
