--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -1042,7 +1042,7 @@
                     "reachfactorColumn": "Erreichbarkeitsfaktor",
                     "areaColumn": "Fläche",
                     "intervalTooBigErrorText": "Intervall muss kleiner als Reichweite sein",
-                    "intervalTooSmallErrorText": "Minimale Intervallgröße ist: "
+                    "intervalTooSmallErrorText": "Minimales Intervall ist: "
                 }
             }
         }
