update translation for add via point

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -965,7 +965,7 @@
                     "routingProfileFieldTitle": "Profil",
                     "computeRouteButtonText": "Route Berechnen",
                     "addStartPoint": "Startpunkt setzen",
-                    "addViaPoint": "Wegpunkt setzen",
+                    "addViaPoint": "Zwischenziel einfügen",
                     "addEndPoint": "Zielpunkt setzen",
                     "elevationBtnText": "Höhenprofil",
                     "downloadButtonText": "Download",
