--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -101,6 +101,17 @@
             }
         }
     },
+    "Koala.view.button.RoutingPreference": {
+        "config": {
+            "data": {
+                "i18n": {
+                    "fastestText": "Fastest",
+                    "recommendedText": "Recommended",
+                    "shortestText": "Shortest"
+                }
+            }
+        }
+    },
     "Koala.view.button.SelectFeaturesModel": {
         "config": {
             "data":{
