--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -1027,7 +1027,9 @@
                     "distance": "Distanz",
                     "startTime": "Startzeit",
                     "arrivalTime": "Ankunftszeit",
-                    "settingsTitle": "Einstellungen"
+                    "settingsTitle": "Einstellungen",
+                    "routingAlgorithmClassicTooltip": "Notwendige Fahrzeuge",
+                    "routingAlgorithmForceAllTooltip": "Alle Fahrzeuge"
                 }
             }
         }
