--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -550,7 +550,8 @@
                     "priorityColumnText": "Priority",
                     "addressColumnText": "Address",
                     "descriptionColumnText": "Description",
-                    "uploadTooltip": "Upload targets"
+                    "uploadTooltip": "Upload targets",
+                    "downloadTooltip": "Download targets"
                 }
             }
         }
