--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -533,7 +533,8 @@
                     "startColumnText": "Starting location",
                     "endColumnText": "Ending location",
                     "addVehicleTooltip": "Add vehicle",
-                    "idColumnText": "Vehicle"
+                    "idColumnText": "Vehicle",
+                    "downloadTooltip":"Download vehicles"
                 }
             }
         }
